language/move-lang/tests/move_check/typing/seq_cannot_ignore_resource.exp
error: 

   ┌── tests/move_check/typing/seq_cannot_ignore_resource.move:2:5 ───
   │
 5 │         R{};
   │         ^^^ Cannot ignore resource values. The value must be used
   ·
 5 │         R{};
   │         --- The type: '0x8675309::M::R'
   ·
 2 │     resource struct R {}
   │     -------- Is found to be a non-copyable type here
   │

error: 

    ┌── tests/move_check/typing/seq_cannot_ignore_resource.move:2:5 ───
    │
 10 │         r;
    │         ^ Cannot ignore resource values. The value must be used
    ·
 9 │         let r = R{};
    │                 --- The type: '0x8675309::M::R'
    ·
 2 │     resource struct R {}
    │     -------- Is found to be a non-copyable type here
    │

error: 

    ┌── tests/move_check/typing/seq_cannot_ignore_resource.move:2:5 ───
    │
 14 │         (0, false, R{});
    │         ^^^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
    ·
 14 │         (0, false, R{});
    │                    --- The type: '0x8675309::M::R'
    ·
 2 │     resource struct R {}
    │     -------- Is found to be a non-copyable type here
    │

error: 

    ┌── tests/move_check/typing/seq_cannot_ignore_resource.move:2:5 ───
    │
 19 │         if (true) (0, false, R{}) else (0, false, r);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
    ·
 19 │         if (true) (0, false, R{}) else (0, false, r);
    │                              --- The type: '0x8675309::M::R'
    ·
 2 │     resource struct R {}
    │     -------- Is found to be a non-copyable type here
    │

